files-beyond-kubernetes/my-pod-cm-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-env
spec:
  containers:
    - name: mysql
      image: bitnami/mysql
