files-beyond-kubernetes/my-pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
spec:
  containers:
    - image: busybox
      volumeMounts:
        - mountPath: /busy
          name: test
      name: busy
  volumes:
    - name: test
      persistentVolumeClaim:
        claimName: myclaim
