files-beyond-kubernetes/my-pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-secret
spec:
  containers:
    - name: mysql
      image: bitnami/mysql
